[tool.poetry]
name = "airbricks"
version = "0.1.0"
description = "A modular framework for building scalable Python applications."
authors = ["Alexandre Mendes Bastos <alexandrem.bastos2526@gmail.com"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.32.3"
pyspark = "3.5.0"
databricks-api = "0.8.0"
apache-airflow = "2.7.3"
apache-airflow-providers-databricks = "4.3.0"
apache-airflow-providers-postgres = "5.3.1"
apache-airflow-providers-http = "4.1.0"
apache-airflow-providers-slack = "7.0.0"
boto3 = "1.28.3"
pandas = "2.1.2"
databricks-cli = "0.18.0"
azure-storage-blob = "12.17.0"
google-cloud-storage = "2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
